2022-09-01T01:52:09Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2968323208
* notice: last 14d: unq all: 13 34
* notice: prev accum: outdated-unq outdated-all / unq all: 186 303 / 202 334
* notice: next accum: outdated-unq outdated-all / unq all: 186 303 / 203 337
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-08-31]

2022-08-31T02:16:24Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2960865970
* notice: last 14d: unq all: 12 31
* notice: prev accum: outdated-unq outdated-all / unq all: 186 303 / 201 333
* notice: next accum: outdated-unq outdated-all / unq all: 186 303 / 202 334
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-30]

2022-08-29T16:25:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2950109196
* notice: last 14d: unq all: 11 30
* notice: prev accum: outdated-unq outdated-all / unq all: 184 300 / 200 329
* notice: next accum: outdated-unq outdated-all / unq all: 186 303 / 201 333
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +9 +22 -0 -0 / 9 22
* notice: removed / changed dates: [2022-08-15] / [2022-08-29]

2022-08-29T08:22:58Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2947023768
* notice: last 14d: unq all: 10 29
* notice: prev accum: outdated-unq outdated-all / unq all: 184 300 / 192 311
* notice: next accum: outdated-unq outdated-all / unq all: 184 300 / 200 329
* notice: prev exec diff / last date diff / accum: unq all: +8 +18 -0 -0 / +8 +18 -0 -0 / 8 18
* notice: removed / changed dates: [] / [2022-08-29]

2022-08-27T01:59:40Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2937603631
* notice: last 14d: unq all: 5 11