@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-01T01:52:09Z",
-  "count_outdated" : 303,
-  "uniques_outdated" : 186,
+  "timestamp" : "2022-09-01T08:25:31Z",
+  "count_outdated" : 304,
+  "uniques_outdated" : 187,
   "count" : 337,
   "uniques" : 203,
   "clones" : [
-    {
-      "timestamp": "2022-08-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-22T00:00:00Z",
       "count": 3,
