@@ -1,12 +1,7 @@
 {
-  "count": 34,
-  "uniques": 13,
+  "count": 33,
+  "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2022-08-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-22T00:00:00Z",
       "count": 3,
