@@ -1,3 +1,11 @@
+2022-09-01T08:25:31Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2970060598
+* notice: last 14d: unq all: 12 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 186 303 / 203 337
+* notice: next accum: outdated-unq outdated-all / unq all: 187 304 / 203 337
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-18] / []
+
 2022-09-01T01:52:09Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2968323208
 * notice: last 14d: unq all: 13 34
